@@ -22,6 +22,8 @@ repositories {
     mavenCentral()
 }
 
+val mockitoAgent = configurations.create("mockitoAgent")
+
 dependencyManagement {
     imports {
         mavenBom("org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion")
@@ -94,15 +96,12 @@ dependencies {
 
     testImplementation("org.junit.jupiter:junit-jupiter-params")
     testImplementation("org.awaitility:awaitility")
+    mockitoAgent("org.mockito:mockito-core") { isTransitive = false }
 }
 
 tasks.withType<Test> {
     useJUnitPlatform()
-
-    jvmArgs(
-        "-XX:+EnableDynamicAgentLoading",
-        "--enable-native-access=ALL-UNNAMED"
-    )
+    jvmArgs("-Xshare:off", "-javaagent:${mockitoAgent.asPath}")
 }
 
 tasks.test {
